--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.4.1
 certifi==2021.5.30
 charset-normalizer==2.0.4
+dj-database-url==0.5.0
 Django==3.2.6
 django-cors-headers==3.7.0
+django-heroku==0.3.1
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
+gunicorn==20.1.0
 idna==3.2
 numpy==1.21.1
 pandas==1.3.1
@@ -17,3 +20,4 @@ riotwatcher==3.1.3
 six==1.16.0
 sqlparse==0.4.1
 urllib3==1.26.6
+whitenoise==5.3.0
